--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
   <body>
     <p>this is first paragraph</p>
+    <p>this is second paragraph</p>
+    <p>this is third paragraph</p>
   </body>
 </html>
